Body editor. New Textures.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -122,4 +122,5 @@ idea {
 dependencies {
     compile files('libs/gdx-sqlite-android.jar')
     compile files('libs/gdx-sqlite.jar')
+    compile files('libs/bodyeditor-loader.jar')
 }
